# NLBNavigator

./: .gitignore  CMakeLists.txt  LICENSE  NLBNavigator.uproject  README.md
Config/: DefaultEngine.ini  DefaultGame.ini
Content/FirstPerson/Blueprints/: BP_FirstPersonCharacter.uasset
Content/FirstPerson/Input/: IMC_Default.uasset
Content/FirstPerson/Input/Actions/: IA_Interact.uasset  IA_SwitchToVN.uasset
Content/Inputs/: SwitchToVisualNovelAction.uasset  SwitchToVisualNovelMapping.uasset
Content/NLB/Input/: IMC_Default.uasset
Content/NLB/Input/Actions/: IA_NextPage.uasset  IA_SwitchToVN.uasset  IA_ToggleView.uasset
Content/NLB/UI/: NLBWidget.uasset
Content/PLD/UI/: PLDInteractionWidget.uasset
Content/UI/: NLBWidget.uasset
Source/: NLBNavigator.Target.cs  NLBNavigatorEditor.Target.cs  main.cpp
Source/NLBCore/: NLBCore.Build.cs  NLBCore.cpp  NLBCore.h
Source/NLBCore/Private/: AbstractIdentifiableItem.cpp  DecisionPoint.cpp  DummyNLB.cpp  FileManipulator.cpp  FileUtils.cpp  History.cpp  Link.cpp  MediaExportParameters.cpp  MediaFileImpl.cpp  MultiLangString.cpp  NodeItem.cpp  NonLinearBook.cpp  Obj.cpp  Page.cpp  PropertyManager.cpp  QuotationHelper.cpp  SearchContract.cpp  SearchResult.cpp  StringHelper.cpp  TextChunk.cpp  Variable.cpp
Source/NLBCore/Private/nlb/api/: ConsoleProgressData.cpp  Constants.cpp  CoordsLw.cpp  DummyNLB.cpp  Link.cpp  LinkLw.cpp  LinksTableModel.cpp  Modification.cpp  ModificationsTableModel.cpp  NodeItem.cpp  NonLinearBook.cpp  Obj.cpp  Page.cpp  PartialProgressData.cpp  PropertyManager.cpp  RootModulePage.cpp  SearchContract.cpp  SearchResultTableModel.cpp  SpecialVariablesNameHelper.cpp  TextChunk.cpp  Theme.cpp  Variable.cpp
Source/NLBCore/Private/nlb/domain/: AbstractIdentifiableItem.cpp  AbstractModifyingItem.cpp  AbstractNodeItem.cpp  ChangeContainerCommand.cpp  Clipboard.cpp  CommandChainCommand.cpp  CoordsImpl.cpp  LinkImpl.cpp  MediaExportParameters.cpp  MediaFileImpl.cpp  ModificationImpl.cpp  NonLinearBookFacade.cpp  NonLinearBookImpl.cpp  NullObj.cpp  ObjImpl.cpp  ObserverHandler.cpp  PageImpl.cpp  SearchResult.cpp  UndoManager.cpp  UpdateLinkCoordsCommand.cpp  UpdateNodeCoordsCommand.cpp  VariableImpl.cpp
Source/NLBCore/Private/nlb/util/: FileManipulator.cpp  FileUtils.cpp  MultiLangString.cpp  QuotationHelper.cpp  ResourceManager.cpp  StringHelper.cpp
Source/NLBCore/Private/nlb/vcs/: Author.cpp  DummyVCSAdapter.cpp
Source/NLBCore/Private/user/domain/: DecisionPoint.cpp  History.cpp
Source/NLBCore/Public/: AbstractIdentifiableItem.h  Constants.h  DecisionPoint.h  DummyNLB.h  FileManipulator.h  FileUtils.h  History.h  IdentifiableItem.h  Link.h  MediaFile.h  MediaFileImpl.h  Modification.h  ModifyingItem.h  MultiLangString.h  NLBExceptions.h  NodeItem.h  NonLinearBook.h  Obj.h  Page.h  ProgressData.h  SearchContract.h  StringHelper.h  Theme.h  VCSAdapter.h  Variable.h
Source/NLBCore/Public/nlb/api/: Any.h  ConsoleProgressData.h  Coords.h  CoordsLw.h  DummyNLB.h  DummyProgressData.h  IdentifiableItem.h  Link.h  LinkLw.h  LinksTableModel.h  MediaFile.h  Modification.h  ModificationsTableModel.h  ModifyingItem.h  NLBCommand.h  NLBObservable.h  NLBObserver.h  NodeItem.h  NonLinearBook.h  Obj.h  Page.h  PartialProgressData.h  PropertyManager.h  RootModulePage.h  SearchResultTableModel.h  SpecialVariablesNameHelper.h  TextChunk.h  Theme.h  Variable.h
Source/NLBCore/Public/nlb/domain/: AbstractIdentifiableItem.h  AbstractModifyingItem.h  AbstractNodeItem.h  ChangeContainerCommand.h  Clipboard.h  CommandChainCommand.h  CoordsImpl.h  LinkImpl.h  MediaExportParameters.h  MediaFileImpl.h  ModificationImpl.h  NonLinearBookFacade.h  NonLinearBookImpl.h  NullObj.h  ObjImpl.h  ObserverHandler.h  PageImpl.h  SearchResult.h  UndoManager.h  UpdateLinkCoordsCommand.h  UpdateNodeCoordsCommand.h  VariableImpl.h
Source/NLBCore/Public/nlb/util/: EnumUtils.h  FileManipulator.h  FileUtils.h  MultiLangString.h  QuotationHelper.h  ResourceManager.h  StringHelper.h  UUID.h
Source/NLBCore/Public/nlb/vcs/: Author.h  DummyVCSAdapter.h  VCSAdapter.h
Source/NLBCore/Public/user/domain/: DecisionPoint.h  History.h
Source/NLBNavigator/: NLBController.cpp  NLBController.h  NLBNavigator.Build.cs  NLBNavigator.cpp  NLBNavigatorCharacter.cpp  NLBNavigatorCharacter.h  NLBNavigatorGameMode.cpp  NLBNavigatorGameMode.h  NLBNavigatorPickUpComponent.cpp  NLBNavigatorPickUpComponent.h  NLBNavigatorProjectile.cpp  NLBNavigatorProjectile.h  NLBNavigatorWeaponComponent.cpp  NLBNavigatorWeaponComponent.h  NLBWidget.cpp  NLBWidget.h  PLDInteractableActor.h
Source/NLBNavigator/Adapters/nlb/api/: IdentifiableItemAdapter.h  ModificationAdapter.cpp  ModificationAdapter.h  ModifyingItemAdapter.cpp  UELinkAdapter.h  UEObjAdapter.cpp  UEObjAdapter.h  UEPageAdapter.cpp  (+2 more)
Source/NLBNavigator/NLB/: IdentifiableItemAdapter.cpp  IdentifiableItemAdapter.h  ModificationAdapter.cpp  ModificationAdapter.h  ModifyingItemAdapter.cpp  ModifyingItemadapter.h  NLBWidget.cpp  UEConstantsAdapter.h  UELinkAdapter.cpp  UELinkAdapter.h  UEMultiLangStringAdapter.cpp  UEMultiLangStringAdapter.h  UEPageAdapter.cpp  UEPageAdapter.h  UEThemeAdapter.h
Source/NLBNavigator/NLB/Adapters/: IdentifiableItemAdapter.cpp  IdentifiableItemAdapter.h  ModificationAdapter.cpp  ModificationAdapter.h  ModifyingItemAdapter.h  UEConstantsAdapter.h  UELinkAdapter.cpp  UELinkAdapter.h  UEMultiLangStringAdapter.cpp  UEMultiLangStringAdapter.h  UEObjAdapter.cpp  UEObjAdapter.h  UEPageAdapter.cpp  UEPageAdapter.h  UEThemeAdapter.cpp  UEThemeAdapter.h  UEVariableAdapter.cpp  UEVariableAdapter.h
Source/NLBNavigator/NLB/api/: Constants.cpp  Constants.h  IdentifiableItem.h  Link.cpp  Link.h  MediaExportParameters.h  Modification.h  ModifyingItem.h  MultiLangString.h  NLBExceptions.h  NonLinearBook.h  Page.h  ProgressData.h  Theme.cpp  Theme.h
Source/NLBNavigator/PLD/: InteractableInterface.h  PLDInteractableActor.cpp  PLDInteractableActor.h  PLDInteractionWidget.cpp  PLDInteractionWidget.h
Source/PLDCore/: PLDCore.Build.cs
Source/PLDCore/Private/: PLDCore.cpp
Source/PLDCore/Public/: PLDCore.h
(+6 files in other folders)
